--- a/src/index.css
+++ b/src/index.css
@@ -55,6 +55,10 @@ a {
   color: Black;
 }
 
+.link-posts {
+  text-decoration: none;
+}
+
 .link:hover {
   color: peru;
 }
@@ -65,4 +69,37 @@ a {
   justify-self: center;
   justify-items: center;
   padding: 0px 10px;
+}
+
+.post-container {
+  margin-bottom: 20px;
+  color: black;
+}
+
+.write-btn {
+  --button-color: #ffffff;
+  --button-bg-color: rgba(240, 188, 77, 0.815);
+  --button-hover-bg-color: #025ce2;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  background: var(--button-bg-color);
+  color: var(--button-color);
+  margin-bottom: 20px;
+  padding: 0.5rem 1rem;
+  font-family: "Noto Sans KR", sans-serif;
+  font-size: 1rem;
+  font-weight: 400;
+  text-align: center;
+  text-decoration: none;
+  border: none;
+  border-radius: 4px;
+  display: inline-block;
+  width: auto;
+  box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
+    0 2px 4px -1px rgba(0, 0, 0, 0.06);
+
+  cursor: pointer;
+
+  transition: 0.5s;
 }
