--- a/src/index.css
+++ b/src/index.css
@@ -71,6 +71,77 @@ a {
   padding: 0px 10px;
 }
 
+.login_input {
+  width: 47%;
+  height: 5vh;
+  margin-bottom: 20px;
+  padding: 0.5rem 1rem;
+  display: inline-block;
+  font-family: "Noto Sans KR", sans-serif;
+}
+
+.login_btn {
+  width: 50%;
+  --button-color: #ffffff;
+  --button-bg-color: rgba(240, 188, 77, 0.815);
+  --button-hover-bg-color: #025ce2;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  background: var(--button-bg-color);
+  color: var(--button-color);
+  margin-bottom: 20px;
+  padding: 0.5rem 1rem;
+  font-family: "Noto Sans KR", sans-serif;
+  font-size: 1rem;
+  font-weight: 400;
+  text-align: center;
+  text-decoration: none;
+  border: none;
+  border-radius: 4px;
+  display: inline-block;
+  box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
+    0 2px 4px -1px rgba(0, 0, 0, 0.06);
+  cursor: pointer;
+  transition: 0.5s;
+}
+
+.link-signup {
+  justify-content: center;
+  align-content: center;
+  justify-self: center;
+  justify-items: center;
+  padding: 0px 10px;
+}
+
+.login_to_signup {
+  --button-color: #ffffff;
+  --button-bg-color: rgba(247, 128, 10, 0.815);
+  --button-hover-bg-color: #025ce2;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  background: var(--button-bg-color);
+  color: var(--button-color);
+  margin-bottom: 20px;
+  padding: 0.5rem 1rem;
+  font-family: "Noto Sans KR", sans-serif;
+  font-size: 1rem;
+  font-weight: 400;
+  text-align: center;
+  text-decoration: none;
+  border: none;
+  border-radius: 4px;
+  display: inline-block;
+  width: 50%;
+  box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
+    0 2px 4px -1px rgba(0, 0, 0, 0.06);
+
+  cursor: pointer;
+
+  transition: 0.5s;
+}
+
 .post-container {
   margin-bottom: 20px;
   color: black;
