--- a/src/index.css
+++ b/src/index.css
@@ -72,8 +72,8 @@ a {
 }
 
 .login_input {
-  width: 47%;
-  height: 5vh;
+  width: 60%;
+  height: 3vh;
   margin-bottom: 20px;
   padding: 0.5rem 1rem;
   display: inline-block;
@@ -81,7 +81,6 @@ a {
 }
 
 .login_btn {
-  width: 50%;
   --button-color: #ffffff;
   --button-bg-color: rgba(240, 188, 77, 0.815);
   --button-hover-bg-color: #025ce2;
@@ -104,6 +103,7 @@ a {
     0 2px 4px -1px rgba(0, 0, 0, 0.06);
   cursor: pointer;
   transition: 0.5s;
+  width: 60%;
 }
 
 .link-signup {
@@ -133,13 +133,13 @@ a {
   border: none;
   border-radius: 4px;
   display: inline-block;
-  width: 50%;
   box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
     0 2px 4px -1px rgba(0, 0, 0, 0.06);
 
   cursor: pointer;
 
   transition: 0.5s;
+  width: 60%;
 }
 
 .post-container {
@@ -228,5 +228,32 @@ a {
 
   cursor: pointer;
 
+  transition: 0.5s;
+}
+
+.logout-btn,
+.profile-edit-btn {
+  --button-color: #ffffff;
+  --button-bg-color: rgba(240, 188, 77, 0.815);
+  --button-hover-bg-color: #025ce2;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  background: var(--button-bg-color);
+  color: var(--button-color);
+  margin: 5px;
+  padding: 0.5rem 1rem;
+  font-family: "Noto Sans KR", sans-serif;
+  font-size: 1rem;
+  font-weight: 300;
+  text-align: center;
+  text-decoration: none;
+  border: none;
+  border-radius: 4px;
+  display: inline-block;
+  width: auto;
+  box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
+    0 2px 4px -1px rgba(0, 0, 0, 0.06);
+  cursor: pointer;
   transition: 0.5s;
 }
